<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- see   MenuCompat.setGroupDividerEnabled(menu, true); to enable separator -->
    <group android:id="@+id/page_one" >
        <group android:checkableBehavior="single" >
            <item
                android:checkable="true"
                android:checked="true"
                android:id="@+id/setting_menu_one_long"
                android:title="@string/setting_menu_one_long" />

            <item
                android:checkable="true"
                android:id="@+id/setting_menu_one_short"
                android:title="@string/setting_menu_one_short" />
        </group>

        <item
            android:title="@string/hr"
            android:enabled="false" />

        <group android:checkableBehavior="single" >
            <item
                android:checkable="true"
                android:id="@+id/setting_menu_one_2threads"
                android:title="@string/setting_menu_one_2threads" />

            <item
                android:checkable="true"
                android:checked="true"
                android:id="@+id/setting_menu_one_4threads"
                android:title="@string/setting_menu_one_4threads" />

            <item
                android:checkable="true"
                android:id="@+id/setting_menu_one_6threads"
                android:title="@string/setting_menu_one_6threads" />
        </group>
    </group>
</menu>